--- a/dubbo/dubbo-004-zk-userservice-provider/pom.xml
+++ b/dubbo/dubbo-004-zk-userservice-provider/pom.xml
@@ -23,16 +23,36 @@
       <artifactId>dubbo</artifactId>
       <version>2.6.12</version>
     </dependency>
+
+
     <dependency>
       <groupId>com.ltx</groupId>
       <artifactId>dubbo-003-zk-interface</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
     <!--zookeeper依赖-->
     <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-framework</artifactId>
-      <version>5.4.0</version>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+      <version>4.1.0</version>
+      <!--先排除zookeeper-->
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.zookeeper</groupId>
+          <artifactId>zookeeper</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.8.1</version>
     </dependency>
 
 
