--- a/dubbo/dubbo-005-zk-consumer/pom.xml
+++ b/dubbo/dubbo-005-zk-consumer/pom.xml
@@ -14,6 +14,11 @@
       <artifactId>spring-context</artifactId>
       <version>6.0.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>6.0.5</version>
+    </dependency>
     <!--springmvc依赖-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -22,21 +27,44 @@
     </dependency>
     <!--dubbo依赖-->
     <dependency>
-      <groupId>org.apache.dubbo</groupId>
+      <groupId>com.alibaba</groupId>
       <artifactId>dubbo</artifactId>
-      <version>3.1.7</version>
+      <version>2.6.12</version>
     </dependency>
+
     <!--zookeeper依赖-->
     <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-framework</artifactId>
-      <version>5.4.0</version>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+      <version>4.1.0</version>
+      <!--先排除zookeeper-->
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.zookeeper</groupId>
+          <artifactId>zookeeper</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.8.1</version>
     </dependency>
     <!--接口工程依赖-->
     <dependency>
       <groupId>com.ltx</groupId>
       <artifactId>dubbo-003-zk-interface</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.1.1</version>
     </dependency>
   </dependencies>
 
